# CSIS3700

./: .gitignore  README.md
Labs/4 - Generic Containers/: simpleStack.h  stackTest2.cc
Labs/Lab 1 - Sperate Compilation/: Makefile~  lab1  lab1.h  lab1.h~  main.cc~  print.cc~  read.cc~  sort.cc~
Labs/Lab 2/: Makefile  die.cc  die.cc~  die.h~  dieTest.cc  dieTest.cc~  lab2
Labs/Lab 2 - Classes and Objects/: Makefile~  die.h  dieTest.cc  lab2
Projects/Calculator/: CMakeLists.txt  Makefile.txt  calculator  calculator.cpp  calculator.h  main.cpp  snippets.txt  snippets~
Projects/Calculator/nbproject/: configurations.xml  project.xml
Projects/Calculator/nbproject/private/: Default.properties  configurations.xml  private.xml
Projects/Duck v. Marvin/: CMakeLists.txt  duckDodgers.cpp  duckDodgers.h  list of functions  main.cpp  snippets
Projects/FamilyTree/: CMakeLists.txt  familyTree.cpp  familyTree.h  main.cpp  snippet.txt
Projects/Fractions/: CMakeLists.txt  Fraction.cpp  Fraction.cpp~  Fraction.h  Makefile  Point.cpp  Point.h  fraction  main.cpp
